--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -8,7 +8,7 @@
 
   <style>
     html, body { margin:0; padding:0; background:#000; }
-    body{ overflow-x:hidden; font-family: system-ui, sans-serif; color:#fff; }
+    body{ overflow-x:hidden; font-family: 'Funnel Display', sans-serif; color:#fff; }
 
     /* Background glow */
     body::before{
@@ -464,7 +464,7 @@
       <div class="hero-grid">
         <div>
           <!--<div class="kicker">MCVDesign • Houston, Texas</div>-->
-          <h1 class="title"><span class="accent">Houston Web Design</span><br>That Gets More Leads for Your Business</h1>
+          <h1 class="title"><span class="accent">Houston Web Design</span><br>That Gets More Leads for Your Business.</h1>
           <div class="proof-divider"></div>
           <p class="lede">
             We design and build custom websites for Houston businesses that turn clarity, performance, and structure into a reliable lead engine.
@@ -663,153 +663,205 @@
       window.addEventListener("resize", () => ScrollTrigger.refresh());
     }
   </script>
+
 <script>
 (() => {
   const canvas = document.getElementById("vapor");
-  const ctx = canvas.getContext("2d", { alpha:true });
+  if (!canvas) return;
+
+  // ✅ Mobile detection (safe)
+  const isMobile = matchMedia("(hover: none) and (pointer: coarse)").matches
+                || matchMedia("(max-width: 980px)").matches;
+
+  const ctx = canvas.getContext("2d", { alpha: true });
 
   // Offscreen buffer (we render the sim here, then blur-composite to main)
   const buf = document.createElement("canvas");
-  const btx = buf.getContext("2d", { alpha:true });
+  const btx = buf.getContext("2d", { alpha: true });
 
-  const isMobile = window.matchMedia("(max-width: 768px)").matches;
+  // Temp buffer to preserve content on resize (prevents “fade on scroll” resets)
+  const tmp = document.createElement("canvas");
+  const ttx = tmp.getContext("2d", { alpha: true });
 
   const S = {
-    w:0, h:0,
+    w: 0, h: 0,
     dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
-    t:0,
+    t: 0,
 
-    // slow drift
     speed: 0.0046,
 
-    // ✅ smoothness / pixel control
-    scale: 0.70,     // (0.65–0.85 recommended)
-    fade: 0.22,      // less fade = more presence
-    glow: 0.25,      // tiny bump (still subtle)
-    density: 0.66,   // stronger vapor overall
+    // ✅ keep your desktop defaults exactly
+    scale: 0.70,
+    fade: 0.22,
+    glow: 0.25,
+    density: 0.66,
 
-    // across-screen band behavior
     amp: 0.16,
     drift: 0.16,
     band: 0.16,
     breakUp: 1.05,
 
-    // composite blur (kills pixel blocks)
-    blurBase: 10,    // main blur pass
-    blurDetail: 4,   // definition pass
-    blurGlow: 14,    // bloom pass
+    blurBase: 10,
+    blurDetail: 4,
+    blurGlow: 14,
 
-    // mouse drift
-    mx:0, my:0, px:0, py:0
+    mx: 0, my: 0, px: 0, py: 0,
+
+    // Internal: track “real” viewport size so scroll UI doesn’t constantly reset
+    _lastW: 0,
+    _lastH: 0,
+    _lockH: 0
   };
 
-  // ✅ Mobile-only visual matching
-  // We DON'T change the “look” logic—just normalize the viewport + scale.
-  const M = {
-    // desktop “visual reference” (tweak if you want it slightly smaller/larger on mobile)
-    refW: 1440,
-    refH: 900,
-    k: 1
-  };
-
-  function getVW() {
-    if (!isMobile) return window.innerWidth;
-    return Math.floor((window.visualViewport && window.visualViewport.width) || window.innerWidth);
-  }
-  function getVH() {
-    if (!isMobile) return window.innerHeight;
-    return Math.floor((window.visualViewport && window.visualViewport.height) || window.innerHeight);
+  // ✅ Mobile-only tuning: more blur/glow + a little greener (desktop untouched)
+  if (isMobile) {
+    S.blurBase  = 14;
+    S.blurDetail= 6;
+    S.blurGlow  = 22;
+    S.glow      = 0.34;
+    // keep density the same unless you want stronger vapor:
+    // S.density = 0.70;
   }
 
-  function updateMobileScale(){
-    if (!isMobile) { M.k = 1; return; }
-    // Scale all “size-based” geometry so mobile feels like desktop.
-    // (If mobile looks too big, this k will be < 1.)
-    const vw = S.w;
-    const vh = S.h;
-    const kW = vw / M.refW;
-    const kH = vh / M.refH;
-    // Use the smaller ratio so it never inflates on tall phones
-    M.k = Math.max(0.72, Math.min(1.0, Math.min(kW, kH)));
+  function getViewportWH() {
+    // Width is stable. Height is not stable on mobile due to address bar.
+    const w = Math.floor(window.innerWidth);
+
+    // Use a locked height on mobile to prevent scroll-induced “resize”
+    // We only update lock on true resizes/orientation changes.
+    const rawH = Math.floor(window.innerHeight);
+
+    if (!isMobile) return { w, h: rawH };
+
+    // If we haven't locked yet, lock now
+    if (!S._lockH) S._lockH = rawH;
+
+    // If height changes a little (address bar), ignore it
+    // If it changes a lot (orientation), we’ll update lock in scheduleResize().
+    return { w, h: S._lockH };
   }
 
-  function resize(){
-    S.w = Math.floor(getVW());
-    S.h = Math.floor(getVH());
+  function resize(preserve = true) {
+    const { w, h } = getViewportWH();
 
-    updateMobileScale();
+    // Preserve buffer to avoid “fade” when resizing
+    if (preserve && buf.width && buf.height) {
+      tmp.width  = buf.width;
+      tmp.height = buf.height;
+      ttx.setTransform(1,0,0,1,0,0);
+      ttx.clearRect(0,0,tmp.width,tmp.height);
+      ttx.drawImage(buf, 0, 0);
+    }
+
+    S.w = w;
+    S.h = h;
 
     // Main canvas uses DPR for sharp UI layers
     canvas.width  = Math.floor(S.w * S.dpr);
     canvas.height = Math.floor(S.h * S.dpr);
     canvas.style.width  = S.w + "px";
     canvas.style.height = S.h + "px";
-    ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
+    ctx.setTransform(S.dpr, 0, 0, S.dpr, 0, 0);
 
-    // ✅ Buffer does NOT use DPR (prevents sampling artifacts / “grid” pixels)
+    // Buffer does NOT use DPR (prevents sampling artifacts / “grid” pixels)
     buf.width  = Math.floor(S.w * S.scale);
     buf.height = Math.floor(S.h * S.scale);
-    btx.setTransform(1,0,0,1,0,0);
+    btx.setTransform(1, 0, 0, 1, 0, 0);
 
-    // store for step()
     S.bw = buf.width;
     S.bh = buf.height;
 
-    // Quality hints
     ctx.imageSmoothingEnabled = true;
     ctx.imageSmoothingQuality = "high";
     btx.imageSmoothingEnabled = true;
     btx.imageSmoothingQuality = "high";
 
-    // clear
-    btx.fillStyle = "rgba(0,0,0,1)";
-    btx.fillRect(0,0,S.bw,S.bh);
-    ctx.clearRect(0,0,S.w,S.h);
+    // Restore preserved content (prevents visible “reset”)
+    if (preserve && tmp.width && tmp.height) {
+      btx.clearRect(0,0,S.bw,S.bh);
+      btx.globalCompositeOperation = "source-over";
+      btx.drawImage(tmp, 0, 0, tmp.width, tmp.height, 0, 0, S.bw, S.bh);
+    } else {
+      // initial clear
+      btx.fillStyle = "rgba(0,0,0,1)";
+      btx.fillRect(0,0,S.bw,S.bh);
+    }
+
+    ctx.clearRect(0, 0, S.w, S.h);
+    S._lastW = w;
+    S._lastH = h;
   }
 
-  window.addEventListener("resize", resize, { passive:true });
-  if (window.visualViewport) {
-    window.visualViewport.addEventListener("resize", resize, { passive:true });
-    window.visualViewport.addEventListener("scroll", resize, { passive:true }); // iOS address bar changes
-  }
-  resize();
+  // Debounced resize that updates the height lock only on “real” changes
+  let resizeRAF = 0;
+  function scheduleResize() {
+    cancelAnimationFrame(resizeRAF);
+    resizeRAF = requestAnimationFrame(() => {
+      const w = Math.floor(window.innerWidth);
+      const h = Math.floor(window.innerHeight);
 
-  window.addEventListener("pointermove", (e)=>{
+      // On mobile: update lock only if width changed or height changed a lot
+      if (isMobile) {
+        const bigHeightChange = Math.abs(h - (S._lockH || h)) > 120; // orientation/real resize
+        const widthChanged    = Math.abs(w - (S._lastW || w)) > 2;
+
+        if (widthChanged || bigHeightChange) {
+          S._lockH = h;
+          resize(true);
+        }
+        // If not “real”, do nothing (prevents scroll fade)
+        return;
+      }
+
+      // Desktop: normal behavior
+      resize(true);
+    });
+  }
+
+  window.addEventListener("resize", scheduleResize, { passive: true });
+  window.addEventListener("orientationchange", () => {
+    // force a true recalculation after rotation
+    if (isMobile) S._lockH = 0;
+    scheduleResize();
+  }, { passive: true });
+
+  // Init
+  resize(false);
+
+  // Pointer drift (desktop)
+  window.addEventListener("pointermove", (e) => {
     S.mx = (e.clientX / S.w) * 2 - 1;
     S.my = (e.clientY / S.h) * 2 - 1;
-  }, { passive:true });
+  }, { passive: true });
 
-  const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
+  const clamp = (v, min, max) => Math.max(min, Math.min(max, v));
 
-  // organic-ish fast noise
-  function n2(x,y){
-    return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
+  function n2(x, y) {
+    return Math.sin(x * 1.7 + Math.cos(y * 1.3)) * Math.cos(y * 1.5 + Math.sin(x * 1.1));
   }
 
-  // Airy puff (no bright white hotspot)
-  function puff(x,y,r, colA, colB, a){
-    const g = btx.createRadialGradient(x,y,0, x,y,r);
-    g.addColorStop(0.00, colA.replace("{a}", (0.52*a).toFixed(4)));
-    g.addColorStop(0.38, colB.replace("{a}", (0.46*a).toFixed(4)));
-    g.addColorStop(0.78, colA.replace("{a}", (0.15*a).toFixed(4)));
+  function puff(x, y, r, colA, colB, a) {
+    const g = btx.createRadialGradient(x, y, 0, x, y, r);
+    g.addColorStop(0.00, colA.replace("{a}", (0.52 * a).toFixed(4)));
+    g.addColorStop(0.38, colB.replace("{a}", (0.46 * a).toFixed(4)));
+    g.addColorStop(0.78, colA.replace("{a}", (0.15 * a).toFixed(4)));
     g.addColorStop(1.00, colA.replace("{a}", "0"));
     btx.fillStyle = g;
     btx.beginPath();
-    btx.arc(x,y,r,0,Math.PI*2);
+    btx.arc(x, y, r, 0, Math.PI * 2);
     btx.fill();
   }
 
-  // Across-screen centerline
-  function ribbonY(u, yBase, amp, phase){
+  function ribbonY(u, yBase, amp, phase) {
     const t = S.t;
-    const f1 = Math.sin(t*0.95 + u*6.2 + phase);
-    const f2 = Math.sin(t*0.55 + u*13.0 - phase*0.7);
-    const f3 = Math.sin(t*1.35 + u*3.2);
-    const wave = f1*0.55 + f2*0.30 + f3*0.15;
+    const f1 = Math.sin(t * 0.95 + u * 6.2 + phase);
+    const f2 = Math.sin(t * 0.55 + u * 13.0 - phase * 0.7);
+    const f3 = Math.sin(t * 1.35 + u * 3.2);
+    const wave = f1 * 0.55 + f2 * 0.30 + f3 * 0.15;
     return yBase + wave * amp;
   }
 
-  function step(){
+  function step() {
     S.t += S.speed;
 
     // mouse drift
@@ -822,88 +874,86 @@
     // fade buffer (trails)
     btx.globalCompositeOperation = "source-over";
     btx.fillStyle = `rgba(0,0,0,${S.fade})`;
-    btx.fillRect(0,0,W,H);
+    btx.fillRect(0, 0, W, H);
 
     // draw vapor
     btx.globalCompositeOperation = "lighter";
 
     const layers = [
-      { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
-      { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
-      { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
+      { y: 0.33, amp: S.amp * 0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
+      { y: 0.56, amp: S.amp * 1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
+      { y: 0.74, amp: S.amp * 0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
     ];
 
-    for(const L of layers){
-      const sweep  = (Math.sin(S.t*0.55 + L.phase) * 0.5 + 0.5);
+    for (const L of layers) {
+      const sweep  = (Math.sin(S.t * 0.55 + L.phase) * 0.5 + 0.5);
       const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
 
-      const steps = 120; // continuous bands across screen
+      const steps = 120;
 
-      for(let i=0;i<=steps;i++){
-        const u = i/steps;
+      for (let i = 0; i <= steps; i++) {
+        const u = i / steps;
 
-        // ✅ Mobile-only: scale “geometry” so it matches desktop visual weight.
-        const k = isMobile ? M.k : 1;
+        const TAIL = 520;
+        const x = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
+        const yC = ribbonY(u, H * L.y, H * L.amp, L.phase) + S.py * 12;
 
-        const TAIL = 520 * k; // <— only mobile scales this
-        const x = u*(W + TAIL*2) - TAIL + xShift + S.px*16;
+        const band = (S.band * H);
 
-        const yC = ribbonY(u, H*L.y, (H*L.amp) * k, L.phase) + S.py*12;
-
-        const band = (S.band * H) * k;
-
-        const tt = S.t*0.9 + L.phase + u*2.0;
-        const wx = n2(tt*0.8, u*4.0 + L.phase);
-        const wy = n2(u*3.0 - L.phase, tt*0.7);
+        const tt = S.t * 0.9 + L.phase + u * 2.0;
+        const wx = n2(tt * 0.8, u * 4.0 + L.phase);
+        const wy = n2(u * 3.0 - L.phase, tt * 0.7);
 
         const jx = wx * band * 0.36 * S.breakUp;
         const jy = wy * band * 0.30 * S.breakUp;
 
-        // soft color drift; your exact same palette
-        const c1 = (Math.sin(S.t*0.30 + L.tint + u*2.1)*0.5 + 0.5);
-        const c2 = (Math.cos(S.t*0.24 - L.tint + u*1.7)*0.5 + 0.5);
+        const c1 = (Math.sin(S.t * 0.30 + L.tint + u * 2.1) * 0.5 + 0.5);
+        const c2 = (Math.cos(S.t * 0.24 - L.tint + u * 1.7) * 0.5 + 0.5);
 
-        const A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`;
-        const B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
+        // ✅ Desktop: identical to your original
+        let A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`;
+        let B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
 
-        const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u-0.5)*2, 2.2));
+        // ✅ Mobile only: nudge B greener (very small bias) to counter “blue” shift
+        if (isMobile) {
+          const rB = Math.floor(72 + 14*c1);
+          const gB = Math.floor(170 + 110*c2);      // slightly higher green
+          const bB = Math.floor(110 + 18*c2);       // slightly lower blue
+          B = `rgba(${rB}, ${gB}, ${bB}, {a})`;
+        }
 
-        // PASS 1: wide haze sheet
-        const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52*k, 220*k);
-        const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
+        const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u - 0.5) * 2, 2.2));
+
+        const r1 = clamp(band * (1.18 + 0.35 * Math.sin(tt)), 52, 220);
+        const a1 = (0.010 + 0.010 * c1) * S.density * L.strength * (0.40 + 0.60 * end);
         puff(x, yC, r1, A, B, a1);
 
-        // PASS 2: wisps / inner turbulence
-        const r2 = clamp(r1*0.40, 20*k, 88*k);
+        const r2 = clamp(r1 * 0.40, 20, 88);
         const a2 = a1 * 0.78;
         puff(x + jx, yC + jy, r2, B, A, a2);
 
         const off = (wy * 0.5 + 0.5) * band * 0.90;
-        puff(x - jx*0.55, yC + off*0.32, r2*0.78, A, B, a2*0.50);
-        puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46);
+        puff(x - jx * 0.55, yC + off * 0.32, r2 * 0.78, A, B, a2 * 0.50);
+        puff(x + jx * 0.45, yC - off * 0.30, r2 * 0.72, B, A, a2 * 0.46);
       }
 
-      // super soft background volume
-      const k = isMobile ? M.k : 1;
-      const hx = W*0.5 + Math.sin(S.t*0.28 + L.phase)*W*0.12 + S.px*10;
-      const hy = H*L.y + Math.cos(S.t*0.26 - L.phase)*H*0.10 + S.py*8;
-      puff(hx, hy, Math.hypot(W,H)*0.22 * k, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density);
+      const hx = W * 0.5 + Math.sin(S.t * 0.28 + L.phase) * W * 0.12 + S.px * 10;
+      const hy = H * L.y + Math.cos(S.t * 0.26 - L.phase) * H * 0.10 + S.py * 8;
+      puff(hx, hy, Math.hypot(W, H) * 0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009 * S.density);
     }
 
     btx.globalCompositeOperation = "source-over";
 
-    // composite: blur the buffer as we upscale
+    // composite to main
     ctx.globalCompositeOperation = "source-over";
-    ctx.clearRect(0,0,S.w,S.h);
+    ctx.clearRect(0, 0, S.w, S.h);
 
-    // base pass (soft)
     ctx.save();
     ctx.filter = `blur(${S.blurBase}px)`;
     ctx.globalAlpha = 1;
     ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
-    // detail pass
     ctx.save();
     ctx.filter = `blur(${S.blurDetail}px)`;
     ctx.globalCompositeOperation = "lighter";
@@ -911,7 +961,6 @@
     ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
-    // glow pass
     ctx.save();
     ctx.filter = `blur(${S.blurGlow}px)`;
     ctx.globalCompositeOperation = "lighter";
@@ -924,13 +973,19 @@
     ctx.filter = "none";
   }
 
-  // ✅ Keep your GSAP ticker exactly
-  gsap.ticker.fps(60);
-  gsap.ticker.add(step);
+  // ✅ Runs regardless of scroll (scroll won’t resize/reset now)
+  if (window.gsap?.ticker) {
+    gsap.ticker.fps(60);
+    gsap.ticker.add(step);
+  } else {
+    // fallback if GSAP isn't present for some reason
+    const loop = () => { step(); requestAnimationFrame(loop); };
+    requestAnimationFrame(loop);
+  }
 
-  if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
-    gsap.ticker.remove(step);
-    for(let i=0;i<20;i++) step();
+  if (matchMedia("(prefers-reduced-motion: reduce)").matches) {
+    if (window.gsap?.ticker) gsap.ticker.remove(step);
+    for (let i = 0; i < 20; i++) step();
   }
 })();
 </script>
