--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -8,7 +8,8 @@
 
   <style>
     html, body { margin:0; padding:0; background:#000; }
-    body{ overflow-x:hidden; font-family: 'Funnel Display', sans-serif; color:#fff; }
+    body{ overflow-x:hidden; color:#fff; }
+    * {font-family: 'Funnel Display', sans-serif; }
 
     /* Background glow */
     body::before{
@@ -666,12 +667,9 @@
 
 <script>
 (() => {
+  // ===== Vapor Canvas (desktop unchanged, mobile only tuned) =====
   const canvas = document.getElementById("vapor");
   if (!canvas) return;
-
-  // ✅ Mobile detection (safe)
-  const isMobile = matchMedia("(hover: none) and (pointer: coarse)").matches
-                || matchMedia("(max-width: 980px)").matches;
 
   const ctx = canvas.getContext("2d", { alpha: true });
 
@@ -679,82 +677,56 @@
   const buf = document.createElement("canvas");
   const btx = buf.getContext("2d", { alpha: true });
 
-  // Temp buffer to preserve content on resize (prevents “fade on scroll” resets)
-  const tmp = document.createElement("canvas");
-  const ttx = tmp.getContext("2d", { alpha: true });
+  const isMobile = window.matchMedia("(max-width: 980px)").matches
+                || window.matchMedia("(hover: none) and (pointer: coarse)").matches;
 
+  // --- BASE (your desktop look) ---
   const S = {
     w: 0, h: 0,
     dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
     t: 0,
 
+    // slow drift
     speed: 0.0046,
 
-    // ✅ keep your desktop defaults exactly
-    scale: 0.70,
-    fade: 0.22,
+    // smoothness / pixel control
+    scale: 0.70,  // buffer scale
+    fade: 0.22,   // trails fade (per-frame at ~60fps)
     glow: 0.25,
     density: 0.66,
 
+    // across-screen band behavior
     amp: 0.16,
     drift: 0.16,
     band: 0.16,
     breakUp: 1.05,
 
+    // composite blur
     blurBase: 10,
     blurDetail: 4,
     blurGlow: 14,
 
+    // mouse drift
     mx: 0, my: 0, px: 0, py: 0,
 
-    // Internal: track “real” viewport size so scroll UI doesn’t constantly reset
-    _lastW: 0,
-    _lastH: 0,
-    _lockH: 0
+    bw: 0, bh: 0
   };
 
-  // ✅ Mobile-only tuning: more blur/glow + a little greener (desktop untouched)
+  // --- MOBILE ONLY: make it match desktop "fog" (no desktop changes) ---
   if (isMobile) {
-    S.blurBase  = 14;
-    S.blurDetail= 6;
-    S.blurGlow  = 22;
-    S.glow      = 0.34;
-    // keep density the same unless you want stronger vapor:
-    // S.density = 0.70;
+    // More buffer resolution + more blur + more glow = less "droplet circles"
+    S.scale      = 0.82;   // smoother gradients before blur (key for "airy")
+    S.blurBase   = 18;
+    S.blurDetail = 7;
+    S.blurGlow   = 28;
+    S.glow       = 0.40;
+    S.density    = 0.70;   // slightly fuller so it stays vapor-like
+    // Keep the same color math; blur/glow + density is what makes it read green again.
   }
 
-  function getViewportWH() {
-    // Width is stable. Height is not stable on mobile due to address bar.
-    const w = Math.floor(window.innerWidth);
-
-    // Use a locked height on mobile to prevent scroll-induced “resize”
-    // We only update lock on true resizes/orientation changes.
-    const rawH = Math.floor(window.innerHeight);
-
-    if (!isMobile) return { w, h: rawH };
-
-    // If we haven't locked yet, lock now
-    if (!S._lockH) S._lockH = rawH;
-
-    // If height changes a little (address bar), ignore it
-    // If it changes a lot (orientation), we’ll update lock in scheduleResize().
-    return { w, h: S._lockH };
-  }
-
-  function resize(preserve = true) {
-    const { w, h } = getViewportWH();
-
-    // Preserve buffer to avoid “fade” when resizing
-    if (preserve && buf.width && buf.height) {
-      tmp.width  = buf.width;
-      tmp.height = buf.height;
-      ttx.setTransform(1,0,0,1,0,0);
-      ttx.clearRect(0,0,tmp.width,tmp.height);
-      ttx.drawImage(buf, 0, 0);
-    }
-
-    S.w = w;
-    S.h = h;
+  function resize() {
+    S.w = Math.floor(window.innerWidth);
+    S.h = Math.floor(window.innerHeight);
 
     // Main canvas uses DPR for sharp UI layers
     canvas.width  = Math.floor(S.w * S.dpr);
@@ -763,7 +735,7 @@
     canvas.style.height = S.h + "px";
     ctx.setTransform(S.dpr, 0, 0, S.dpr, 0, 0);
 
-    // Buffer does NOT use DPR (prevents sampling artifacts / “grid” pixels)
+    // Buffer does NOT use DPR
     buf.width  = Math.floor(S.w * S.scale);
     buf.height = Math.floor(S.h * S.scale);
     btx.setTransform(1, 0, 0, 1, 0, 0);
@@ -776,59 +748,16 @@
     btx.imageSmoothingEnabled = true;
     btx.imageSmoothingQuality = "high";
 
-    // Restore preserved content (prevents visible “reset”)
-    if (preserve && tmp.width && tmp.height) {
-      btx.clearRect(0,0,S.bw,S.bh);
-      btx.globalCompositeOperation = "source-over";
-      btx.drawImage(tmp, 0, 0, tmp.width, tmp.height, 0, 0, S.bw, S.bh);
-    } else {
-      // initial clear
-      btx.fillStyle = "rgba(0,0,0,1)";
-      btx.fillRect(0,0,S.bw,S.bh);
-    }
-
+    // clear
+    btx.fillStyle = "rgba(0,0,0,1)";
+    btx.fillRect(0, 0, S.bw, S.bh);
     ctx.clearRect(0, 0, S.w, S.h);
-    S._lastW = w;
-    S._lastH = h;
   }
 
-  // Debounced resize that updates the height lock only on “real” changes
-  let resizeRAF = 0;
-  function scheduleResize() {
-    cancelAnimationFrame(resizeRAF);
-    resizeRAF = requestAnimationFrame(() => {
-      const w = Math.floor(window.innerWidth);
-      const h = Math.floor(window.innerHeight);
+  window.addEventListener("resize", resize, { passive: true });
+  resize();
 
-      // On mobile: update lock only if width changed or height changed a lot
-      if (isMobile) {
-        const bigHeightChange = Math.abs(h - (S._lockH || h)) > 120; // orientation/real resize
-        const widthChanged    = Math.abs(w - (S._lastW || w)) > 2;
-
-        if (widthChanged || bigHeightChange) {
-          S._lockH = h;
-          resize(true);
-        }
-        // If not “real”, do nothing (prevents scroll fade)
-        return;
-      }
-
-      // Desktop: normal behavior
-      resize(true);
-    });
-  }
-
-  window.addEventListener("resize", scheduleResize, { passive: true });
-  window.addEventListener("orientationchange", () => {
-    // force a true recalculation after rotation
-    if (isMobile) S._lockH = 0;
-    scheduleResize();
-  }, { passive: true });
-
-  // Init
-  resize(false);
-
-  // Pointer drift (desktop)
+  // Pointer drift (on mobile, this usually does nothing / less noticeable, but harmless)
   window.addEventListener("pointermove", (e) => {
     S.mx = (e.clientX / S.w) * 2 - 1;
     S.my = (e.clientY / S.h) * 2 - 1;
@@ -862,14 +791,20 @@
   }
 
   function step() {
-    S.t += S.speed;
+    // On mobile, scrolling can throttle frames; using deltaRatio there can make it "fade out".
+    // So: desktop uses true deltaRatio (unchanged), mobile locks it to 1 to keep the same look while scrolling.
+    const dr = (window.gsap && window.gsap.ticker)
+      ? (isMobile ? 1 : window.gsap.ticker.deltaRatio())
+      : 1;
+
+    // time
+    S.t += S.speed * dr;
 
     // mouse drift
     S.px += (S.mx - S.px) * 0.03;
     S.py += (S.my - S.py) * 0.03;
 
-    const W = S.bw;
-    const H = S.bh;
+    const W = S.bw, H = S.bh;
 
     // fade buffer (trails)
     btx.globalCompositeOperation = "source-over";
@@ -890,12 +825,11 @@
       const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
 
       const steps = 120;
-
       for (let i = 0; i <= steps; i++) {
         const u = i / steps;
 
         const TAIL = 520;
-        const x = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
+        const x  = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
         const yC = ribbonY(u, H * L.y, H * L.amp, L.phase) + S.py * 12;
 
         const band = (S.band * H);
@@ -910,17 +844,8 @@
         const c1 = (Math.sin(S.t * 0.30 + L.tint + u * 2.1) * 0.5 + 0.5);
         const c2 = (Math.cos(S.t * 0.24 - L.tint + u * 1.7) * 0.5 + 0.5);
 
-        // ✅ Desktop: identical to your original
-        let A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`;
-        let B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
-
-        // ✅ Mobile only: nudge B greener (very small bias) to counter “blue” shift
-        if (isMobile) {
-          const rB = Math.floor(72 + 14*c1);
-          const gB = Math.floor(170 + 110*c2);      // slightly higher green
-          const bB = Math.floor(110 + 18*c2);       // slightly lower blue
-          B = `rgba(${rB}, ${gB}, ${bB}, {a})`;
-        }
+        const A = `rgba(${Math.floor(84 + 22 * c2)}, ${Math.floor(243 - 18 * c1)}, ${Math.floor(164 + 34 * c1)}, {a})`;
+        const B = `rgba(${Math.floor(72 + 16 * c1)}, ${Math.floor(155 + 120 * c2)}, ${Math.floor(125 + 26 * c2)}, {a})`;
 
         const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u - 0.5) * 2, 2.2));
 
@@ -938,7 +863,7 @@
       }
 
       const hx = W * 0.5 + Math.sin(S.t * 0.28 + L.phase) * W * 0.12 + S.px * 10;
-      const hy = H * L.y + Math.cos(S.t * 0.26 - L.phase) * H * 0.10 + S.py * 8;
+      const hy = H * L.y   + Math.cos(S.t * 0.26 - L.phase) * H * 0.10 + S.py * 8;
       puff(hx, hy, Math.hypot(W, H) * 0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009 * S.density);
     }
 
@@ -948,12 +873,14 @@
     ctx.globalCompositeOperation = "source-over";
     ctx.clearRect(0, 0, S.w, S.h);
 
+    // base pass
     ctx.save();
     ctx.filter = `blur(${S.blurBase}px)`;
     ctx.globalAlpha = 1;
     ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
+    // detail pass
     ctx.save();
     ctx.filter = `blur(${S.blurDetail}px)`;
     ctx.globalCompositeOperation = "lighter";
@@ -961,6 +888,7 @@
     ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
+    // glow pass
     ctx.save();
     ctx.filter = `blur(${S.blurGlow}px)`;
     ctx.globalCompositeOperation = "lighter";
@@ -973,19 +901,23 @@
     ctx.filter = "none";
   }
 
-  // ✅ Runs regardless of scroll (scroll won’t resize/reset now)
-  if (window.gsap?.ticker) {
-    gsap.ticker.fps(60);
-    gsap.ticker.add(step);
-  } else {
-    // fallback if GSAP isn't present for some reason
-    const loop = () => { step(); requestAnimationFrame(loop); };
-    requestAnimationFrame(loop);
+  // Run (GSAP ticker if present; otherwise RAF fallback)
+  const reduced = window.matchMedia("(prefers-reduced-motion: reduce)").matches;
+
+  if (reduced) {
+    // render a few frames and stop
+    for (let i = 0; i < 20; i++) step();
+    return;
   }
 
-  if (matchMedia("(prefers-reduced-motion: reduce)").matches) {
-    if (window.gsap?.ticker) gsap.ticker.remove(step);
-    for (let i = 0; i < 20; i++) step();
+  if (window.gsap && window.gsap.ticker) {
+    window.gsap.ticker.fps(60);
+    window.gsap.ticker.add(step);
+  } else {
+    // Fallback if GSAP isn't loaded
+    let raf;
+    const loop = () => { step(); raf = requestAnimationFrame(loop); };
+    raf = requestAnimationFrame(loop);
   }
 })();
 </script>
